--- a/index.html
+++ b/index.html
@@ -163,46 +163,46 @@
                 </tr>
                 <tr>
                     <td >06.00 - 07.00</td>
-                    <td>beginners</td>
+                    <td class="success">beginners</td>
                     <td>Mixed Circuit Cardio Workout</td>
-                    <td>
-                        <img src="" alt="">
+                    <td class="timeTable-main--trainers">
+                        <img src="img/table1.png" alt="">
                         <p>Floyd Miles</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>06.00 - 07.00</td>
-                    <td>beginners</td>
-                    <td>Mixed Circuit Cardio Workout</td>
-                    <td>
-                        <img src="" alt="">
+                    <td>07.00 - 09.00</td>
+                    <td class="warning">intermediate</td>
+                    <td>Cross Fit / Pilates</td>
+                    <td class="timeTable-main--trainers">
+                        <img src="img/table2.png" alt="">
                         <p>Floyd Miles</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>06.00 - 07.00</td>
-                    <td>beginners</td>
-                    <td>Mixed Circuit Cardio Workout</td>
-                    <td>
-                        <img src="" alt="">
+                    <td>09.00 - 10.00</td>
+                    <td class="success">beginners</td>
+                    <td>Fit Body</td>
+                    <td class="timeTable-main--trainers">
+                        <img src="img/table3.png" alt="">
                         <p>Floyd Miles</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>06.00 - 07.00</td>
-                    <td>beginners</td>
-                    <td>Mixed Circuit Cardio Workout</td>
-                    <td>
-                        <img src="" alt="">
+                    <td>10.00 - 11.00</td>
+                    <td class="warning">beginners</td>
+                    <td>Yoga / Athletic Class</td>
+                    <td class="timeTable-main--trainers">
+                        <img src="img/table4.png" alt="">
                         <p>Floyd Miles</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>06.00 - 07.00</td>
-                    <td>beginners</td>
-                    <td>Mixed Circuit Cardio Workout</td>
-                    <td>
-                        <img src="" alt="">
+                    <td>04.00 - 06.00</td>
+                    <td class="danger">advanced</td>
+                    <td>Mixed Circuit</td>
+                    <td class="timeTable-main--trainers">
+                        <img src="img/table5.png" alt="">
                         <p>Floyd Miles</p>
                     </td>
                 </tr>
