Html-css-figma-day 3

--- a/index.html
+++ b/index.html
@@ -265,7 +265,286 @@
                 </div>
                 <div class="nav-testimonial"></div>
             </section>
+            <section class="team">
+                <div class="container">
+                    <div class="team-header">
+                        <p class="sub-header">Our Trainers</p>
+                        <h3 class="name-header">We Trained You to Gain</h3>
+                    </div>
+                    <div class="team-content">
+                        <div class="team-item">
+                            <img src="img/team1.png" alt="" class="item-img">
+                            <div class="item-main">
+                                <div class="header-item-main">
+                                    <p>Amanda</p>
+                                    <i class="fa-solid fa-star">/5</i>
+                                </div>
+                                <p>Specialisations :</p>
+                                <p>Crossfit Expoort, Nutrition & Rehab</p>
+                                <ul>
+                                    <li><i class="fa-brands fa-instagram"></i></li>
+                                    <li><i class="fa-brands fa-facebook"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <img src="img/team2.png" alt="" class="item-img">
+                            <div class="item-main">
+                                <div class="header-item-main">
+                                    <p>Madison Froning</p>
+                                    <i class="fa-solid fa-star">/5</i>
+                                </div>
+                                <p>Specialisations :</p>
+                                <p>Crossfit Expoort, Nutrition & Rehab</p>
+                                <ul>
+                                    <li><i class="fa-brands fa-instagram"></i></li>
+                                    <li><i class="fa-brands fa-facebook"></i></li>
+                                    <li><i class="fa-brands fa-twitter"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <img src="img/team3.png" alt="" class="item-img">
+                            <div class="item-main">
+                                <div class="header-item-main">
+                                    <p>Joshua Frankilin</p>
+                                    <i class="fa-solid fa-star">/5</i>
+                                </div>
+                                <p>Specialisations :</p>
+                                <p>Crossfit Expoort, Nutrition & Rehab</p>
+                                <ul>
+                                    <li><i class="fa-brands fa-instagram"></i></li>
+                                    <li><i class="fa-brands fa-facebook"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="bebifit">
+                <div class="container">
+                    <div class="bebifit-main">
+                        <div class="bebifit-banner">
+                            <div class="title-bebifit-header">
+                                <p class="sub-header">Gym AMENITIES</p>
+                                <h3 class="name-header">The Unique Standard</h3>
+                                <span style="line-height: 145%;">It is a long established fact that a reader will be distracted 
+                                by the readable content of a page when looking at its layout.
+                                point of using Lorem Ipsum is</span>
+                            </div> 
+                            <div class="bebifit-img">
+                                <img src="img/bebifit.png" alt="">
+                                <div class="play-icon">
+                                    <i class="fa-solid fa-play"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bebifit-content">
+                            
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        LOCKERS
+                                    </div>
+                                    <span>Secure lockers that work by you choosing a four digit code.</span>
+                                </div>
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        CHANGING ROOMS
+                                    </div>
+                                    <span>Delicious, protein-packed gourmet shakes that come in chocolate, fruit, vanilla and more. Water and snacks too.</span>
+                                </div>
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        FUEL BAR
+                                    </div>
+                                    <span>Mini towels for class and lovely big towels for showers after class. *Amenities may not be available at all studios</span>
+                                </div>
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        COMPLIMENTARY TOWELS
+                                    </div>
+                                    <span>Secure lockers that work by you choosing a four digit code.</span>
+                                </div>
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        WIFI & RESTROOMS
+                                    </div>
+                                    <span>Secure lockers that work by you choosing a four digit code.</span>
+                                </div>
+                                <div class="bebifit-content-item">
+                                    <div class="item-number">
+                                        <i class="fa-solid fa-check"></i>
+                                        HOT SHOWERS & HAIR CARE
+                                    </div>
+                                    <span>what your body craves in the morning, you're not alone. The majority of people crank the handle all the way up.</span>
+                                </div>
+                                                    
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="pricing">
+                <div class="container">
+                    <div class="pricing-header">
+                        <p class="sub-header">Our Plan</p>
+                        <h3 class="name-header">Choose the Program</h3>
+                    </div>
+                    <div class="pricing-content">
+                        <div class="content-item">
+                            <div class="pack-item">
+                                <i class="fa-solid fa-heart"></i>
+                                Basic
+                            </div>
+                            <div class="pricing-item">
+                                <p class="name-item">$25 / month</p>
+                                <p>30% Off for Beginners</p>
+                            </div>
+                            <div class="main-item">
+                                <p> 1 Day Free Trial <br>    
+                                    20 minutes of heart-pumping spin <br> 
+                                    20 minutes of strength training <br>
+                                    50 Class Times Available <br>
+                                    20 minutes of invigorating yoga
+                                </p>
+                            </div>
+                            <a href="" class="button button-item-black">Get Started</a>
+                        </div>
+                        <div class="content-item">
+                            <div class="pack-item">
+                                <i class="fa-solid fa-star"></i>
+                                Standard
+                            </div>
+                            <div class="pricing-item">
+                                <p class="name-item">$35 / month</p>
+                                <p class="">Most popular</p>
+                            </div>
+                            <div class="main-item">
+                                <p>2 Week Free Trial <br>
+                                    30 minutes of heart-pumping spin <br> 
+                                    30 minutes of strength training <br>
+                                    50 Class Times Available <br>   
+                                    20 minutes of invigorating yoga <br>
+                                    Udivimited CrossFit Classes <br>
+                                    First 25 New Members Only   
+                                </p>
+                            </div>
+                            <a href="" class="button button-item-white">Get Started</a>
+                        </div>
+                        <div class="content-item">
+                            <div class="pack-item">
+                                <i class="fa-solid fa-gem"></i>
+                                Premium
+                            </div>
+                            <div class="pricing-item">
+                                <p class="name-item">$50 / month</p>
+                                <p>10% Off for Yoga Class</p>
+                            </div>
+                            <div class="main-item">
+                                <p>2 Week Free Trial <br>
+                                    50 minutes of heart-pumping spin <br>   
+                                    50 minutes of strength training <br>
+                                    60 Class Times Available <br>   
+                                    50 minutes of invigorating yoga 
+                                </p>
+                            </div>
+                            <a href="" class="button button-item-black">Get Started</a>
+                        </div>
+                    </div>
+                </div> 
+            </section>
+            <section class="news">
+                <div class="container">
+                    <h3 class="name-header">Articles & News</h3>
+                    <div class="news-content">
+                        <div class="news-content-item">
+                            <div class="news-item-date">
+                                <p>March 23, 2022</p>
+                                <p>Fitness</p>
+                            </div>
+                            <div class="news-item-main">
+                                <p class="name-item">The 10 best exercises to do in your park</p>
+                                <p class="sub-item">There are many variations of passages of Lorem Ipsum available, but the majority have alterationLorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse.</p>
+                            </div>
+                            <a href="" class="button button-item-white">Read More</a>
+                        </div>
+                        <div class="news-content-item">
+                            <div class="news-item-date">
+                                <p>March 23, 2022</p>
+                                <p>Health</p>
+                            </div>
+                            <div class="news-item-main">
+                                <p class="name-item">The 10 best exercises to do in your park</p>
+                                <p class="sub-item">There are many variations of passages of Lorem Ipsum available, but the majority have alterationLorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse.</p>
+                            </div>
+                            <a href="" class="button button-item-white">Read More</a>
+                        </div>
+                        <div class="news-img news-content-item">
+                            <div class="news-item-date">
+                                <p>March 23, 2022</p>
+                                <p>Nutrition</p>
+                            </div>
+                            <div class="news-item-main">
+                                <p class="name-item">The 10 best exercises to do in your park</p>
+                                <p class="sub-item">There are many variations of passages of Lorem Ipsum available, but the majority have alterationLorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse.</p>
+                            </div>
+                            <a href="" class="button button-item-green">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="img-footer">
+                <img src="img/footer.jpg" alt="">
+                <h3 class="name-header">Follow me on Instagram</h3>
+            </div>
+            <div class="container">
+                <div class="footer-main">
+                    <div class="footer-item">
+                        <img src="img/logo-footer.png" alt="">
+                        <p>It is a long established fact that a reader will be distracted by the readable.</p>
+                        <div class="contact">
+                            <p>Call : <br>
+                                01234 987654 <br>
+                                098765 34621
+                            </p>
+                            <p>
+                                Mail : <br>
+                                contact@fitnessfit.com
+                            </p>
+                        </div>
+                    </div>
+                    <div class="footer-item">
+                        <p class="title-footer-item">Utility Pages</p>
+                        <ul class="menu-footer-item">
+                            <li>Style Guide</li>
+                            <li>Changelog</li>
+                            <li>404 Page</li>
+                            <li>Password Protected</li>
+                            <li>Password Protected</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <p class="title-footer-item">Newsletter</p>
+                        <div class="btn-footer-item">
+                            <input type="text" value="Enter Your Email" placeholder="Enter Your Email">
+                            <button type="submit">Subscribe</button>
+                        </div>
+                        <ul class="menu-icon">
+                            <li><i class="fa-brands fa-instagram"></i></li>
+                            <li><i class="fa-brands fa-facebook"></i></li>
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
