Html-css-figma day 4

--- a/index.html
+++ b/index.html
@@ -216,12 +216,15 @@
                 </div>
             </section>
             <section class="testimonial">
-                <div class="content-testimonial">
+                <div id="content-testimonial">
                     <div class="testimonial-item">
-                        <img src="img/test1.jpg" alt="">
+                        <div class="testimonial-item-img">
+                            <img src="img/test1.png" alt="">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
                         <div class="testimonial-item-main">
                             <p>Nattasha</p>
-                            <p>Athletics /Trainer</p>
+                            <span>Athletics /Trainer</span>
                             <ul>
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
@@ -229,14 +232,17 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star-half-stroke"></i></li>
                             </ul>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
+                            <p class="sub-testimonial-item">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour   </p>
                         </div>
                     </div> 
                     <div class="testimonial-item">
-                        <img src="img/test1.jpg" alt="">
+                        <div class="testimonial-item-img">
+                            <img src="img/test2.png" alt="">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
                         <div class="testimonial-item-main">
                             <p>Nattasha</p>
-                            <p>Athletics /Trainer</p>
+                            <span>Athletics /Trainer</span>
                             <ul>
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
@@ -244,14 +250,17 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star-half-stroke"></i></li>
                             </ul>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
+                            <p class="sub-testimonial-item">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
                         </div>
                     </div>
                     <div class="testimonial-item">
-                        <img src="img/test1.jpg" alt="">
+                        <div class="testimonial-item-img">
+                            <img src="img/test1.png" alt="">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
                         <div class="testimonial-item-main">
                             <p>Nattasha</p>
-                            <p>Athletics /Trainer</p>
+                            <span>Athletics /Trainer</span>
                             <ul>
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star"></i></li>
@@ -259,11 +268,50 @@
                                 <li><i class="fa-solid fa-star"></i></li>
                                 <li><i class="fa-solid fa-star-half-stroke"></i></li>
                             </ul>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
+                            <p class="sub-testimonial-item">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour   </p>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-item-img">
+                            <img src="img/test2.png" alt="">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
+                        <div class="testimonial-item-main">
+                            <p>Nattasha</p>
+                            <span>Athletics /Trainer</span>
+                            <ul>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star-half-stroke"></i></li>
+                            </ul>
+                            <p class="sub-testimonial-item">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-item-img">
+                            <img src="img/test1.png" alt="">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
+                        <div class="testimonial-item-main">
+                            <p>Nattasha</p>
+                            <span>Athletics /Trainer</span>
+                            <ul>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star-half-stroke"></i></li>
+                            </ul>
+                            <p class="sub-testimonial-item">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
                         </div>
                     </div>
                 </div>
-                <div class="nav-testimonial"></div>
+                <div class="nav-testimonial">
+                    <a id="prev"><i class="fa-solid fa-angle-left"></i></a>
+                    <a id="next"><i class="fa-solid fa-angle-right"></i></a>                 
+                </div>
             </section>
             <section class="team">
                 <div class="container">
@@ -406,9 +454,9 @@
                             </div>
                             <div class="main-item">
                                 <p> 1 Day Free Trial <br>    
-                                    20 minutes of heart-pumping spin <br> 
+                                    20 minutes of <a href="">heart-pumping spin</a><br> 
                                     20 minutes of strength training <br>
-                                    50 Class Times Available <br>
+                                    <a href="">50 Class</a> Times Available <br>
                                     20 minutes of invigorating yoga
                                 </p>
                             </div>
@@ -421,15 +469,15 @@
                             </div>
                             <div class="pricing-item">
                                 <p class="name-item">$35 / month</p>
-                                <p class="">Most popular</p>
+                                <p class="button-item-green">Most popular</p>
                             </div>
                             <div class="main-item">
                                 <p>2 Week Free Trial <br>
-                                    30 minutes of heart-pumping spin <br> 
+                                    30 minutes of <a href="">heart-pumping spin</a><br> 
                                     30 minutes of strength training <br>
-                                    50 Class Times Available <br>   
+                                    <a href="">50 Class</a> Times Available <br>   
                                     20 minutes of invigorating yoga <br>
-                                    Udivimited CrossFit Classes <br>
+                                    Udivimited <a href="">CrossFit</a> Classes <br>
                                     First 25 New Members Only   
                                 </p>
                             </div>
@@ -446,9 +494,9 @@
                             </div>
                             <div class="main-item">
                                 <p>2 Week Free Trial <br>
-                                    50 minutes of heart-pumping spin <br>   
+                                    50 minutes of <a href="">heart-pumping spin</a> <br>   
                                     50 minutes of strength training <br>
-                                    60 Class Times Available <br>   
+                                    <a href="">60 Class</a> Times Available <br>   
                                     50 minutes of invigorating yoga 
                                 </p>
                             </div>
@@ -463,7 +511,7 @@
                     <div class="news-content">
                         <div class="news-content-item">
                             <div class="news-item-date">
-                                <p>March 23, 2022</p>
+                                <p class="date">March 23, 2022</p>
                                 <p>Fitness</p>
                             </div>
                             <div class="news-item-main">
@@ -474,7 +522,7 @@
                         </div>
                         <div class="news-content-item">
                             <div class="news-item-date">
-                                <p>March 23, 2022</p>
+                                <p class="date">March 23, 2022</p>
                                 <p>Health</p>
                             </div>
                             <div class="news-item-main">
@@ -486,7 +534,7 @@
                         <div class="news-img news-content-item">
                             <div class="news-item-date">
                                 <p>March 23, 2022</p>
-                                <p>Nutrition</p>
+                                <p class="button-item-white">Nutrition</p>
                             </div>
                             <div class="news-item-main">
                                 <p class="name-item">The 10 best exercises to do in your park</p>
@@ -501,13 +549,13 @@
         <footer class="footer">
             <div class="img-footer">
                 <img src="img/footer.jpg" alt="">
-                <h3 class="name-header">Follow me on Instagram</h3>
+                <h3 class="name-header">Follow me on a <a href="">Instagram</a></h3>
             </div>
             <div class="container">
                 <div class="footer-main">
                     <div class="footer-item">
                         <img src="img/logo-footer.png" alt="">
-                        <p>It is a long established fact that a reader will be distracted by the readable.</p>
+                        <p class="sub-footer-item">It is a long established fact that a reader will be distracted by the readable.</p>
                         <div class="contact">
                             <p>Call : <br>
                                 01234 987654 <br>
@@ -545,6 +593,11 @@
                 </div>
             </div>
         </footer>
+        <div class="copyright">
+            <p>Copyright © <a href="">FitnessFit</a> | Designed byVictorFlow Templates - Powered by Webflow </p>
+        </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
