--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
                             </div>
                             <div class="main-item">
                                 <p> 1 Day Free Trial <br>    
-                                    20 minutes of <a href="">heart-pumping spin</a><br> 
+                                    20 minutes of <span>heart-pumping spin</span><br> 
                                     20 minutes of strength training <br>
-                                    <a href="">50 Class</a> Times Available <br>
+                                    <span>50 Class</span> Times Available <br>
                                     20 minutes of invigorating yoga
                                 </p>
                             </div>
@@ -473,11 +473,11 @@
                             </div>
                             <div class="main-item">
                                 <p>2 Week Free Trial <br>
-                                    30 minutes of <a href="">heart-pumping spin</a><br> 
+                                    30 minutes of <span>heart-pumping spin</span><br> 
                                     30 minutes of strength training <br>
-                                    <a href="">50 Class</a> Times Available <br>   
+                                    <span>50 Class</span> Times Available <br>   
                                     20 minutes of invigorating yoga <br>
-                                    Udivimited <a href="">CrossFit</a> Classes <br>
+                                    Udivimited <span>CrossFit</span> Classes <br>
                                     First 25 New Members Only   
                                 </p>
                             </div>
@@ -494,9 +494,9 @@
                             </div>
                             <div class="main-item">
                                 <p>2 Week Free Trial <br>
-                                    50 minutes of <a href="">heart-pumping spin</a> <br>   
+                                    50 minutes of <span>heart-pumping spin</span> <br>   
                                     50 minutes of strength training <br>
-                                    <a href="">60 Class</a> Times Available <br>   
+                                    <span>60 Class</span> Times Available <br>   
                                     50 minutes of invigorating yoga 
                                 </p>
                             </div>
@@ -581,7 +581,7 @@
                     <div class="footer-item">
                         <p class="title-footer-item">Newsletter</p>
                         <div class="btn-footer-item">
-                            <input type="text" value="Enter Your Email" placeholder="Enter Your Email">
+                            <input type="text" value="" placeholder="Enter Your Email">
                             <button type="submit">Subscribe</button>
                         </div>
                         <ul class="menu-icon">
